--- a/res/layout/common_edittext.xml
+++ b/res/layout/common_edittext.xml
@@ -2,9 +2,12 @@
 
 <!-- maxEms是最大字符数 -->
 <EditText xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/common_edittext"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:background="@drawable/common_selector"
     android:maxEms="20"
-    android:lines="1"/>
+    android:textColor="#ffffff"
+    android:lines="2"
+    android:maxLines="2"/>
