--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,4 +17,9 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
+    <!--设置这个主题可以避免背景的重复绘制，提高Activity的启动速度-->
+    <style name="Theme.NoBackground" parent="android:Theme">
+        <item name="android:windowBackground">@null</item>
+    </style>
+
 </resources>
