--- a/res/layout/common_button.xml
+++ b/res/layout/common_button.xml
@@ -4,4 +4,6 @@
     android:layout_width="100dp"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
-    android:text="确认" />
+    android:text="确认"
+    android:textSize="14sp"
+    android:textColor="@android:color/black"/>
